# Generated by Django 5.2.1 on 2025-05-13 17:06

from django.db import migrations


class Migration(migrations.Migration):

    dependencies = [
        ('zoo', '0004_remove_employee_room'),
    ]

    operations = [
        migrations.RemoveField(
            model_name='animal',
            name='country',
        ),
        migrations.RemoveField(
            model_name='animal',
            name='employee',
        ),
        migrations.RemoveField(
            model_name='animal',
            name='family',
        ),
        migrations.RemoveField(
            model_name='animal',
            name='food_type',
        ),
        migrations.RemoveField(
            model_name='animal',
            name='room',
        ),
        migrations.RemoveField(
            model_name='employee',
            name='position',
        ),
        migrations.RemoveField(
            model_name='employee',
            name='user',
        ),
        migrations.DeleteModel(
            name='Country',
        ),
        migrations.DeleteModel(
            name='AnimalFamily',
        ),
        migrations.DeleteModel(
            name='FoodType',
        ),
        migrations.DeleteModel(
            name='Animal',
        ),
        migrations.DeleteModel(
            name='Room',
        ),
        migrations.DeleteModel(
            name='EmployeePosition',
        ),
        migrations.DeleteModel(
            name='Employee',
        ),
    ]
